--- a/travel/templates/updatestory.html
+++ b/travel/templates/updatestory.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-       <!--================Add Story Area =================-->
+    <!--================Blog Area =================-->
     <section class="contact_area section-gap">
         <div class="container">
              <div class="row">
@@ -66,6 +66,5 @@
              </div>
         </div>
     </section>
-    <!--================Add Story Area =================-->
-
+    <!--================Blog Area =================-->
     {% endblock %}
