--- a/travel/templates/addstory.html
+++ b/travel/templates/addstory.html
@@ -9,7 +9,7 @@
                      <h2 class="text-center">Travel Blog</h2>
                  </div>
                  <div class="col-lg-12 pt-4">
-                    <form class="row contact_form" action="" method="post">
+                    <form class="row contact_form" action="" method="post" enctype="multipart/form-data">
                     {{ form.hidden_tag() }}
                     <div class="col-md-12">
                         {{ form.title.label(class="form-control-label") }}
@@ -26,7 +26,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="file" class="form-control" name="img1">
+                            {{ form.picture(class="form-control") }} 
                         </div>
                         <div class="form-group">
                             <input type="file" class="form-control" name="img2">
