--- a/travel/templates/index1.html
+++ b/travel/templates/index1.html
@@ -12,8 +12,9 @@
 				</div>
 			</div>
 		 </div>
-		 
+		
 	     <div class="container-fluid">
+			
 			 <div class="row owl-carousel" id="travel_cat">
 				{% for post in posts %}
 				 	<div class="single_travel wow fadeIn" data-wow-duration="">
@@ -43,6 +44,7 @@
 					</div>
 					{% endfor %}
 				</div>
+			
 			</div>
 			
 		</div>
@@ -224,7 +226,6 @@
 	</section>
 	<!--================ End Latest Blog Area =================-->
 
-	<!--================ Places Area =================-->
 	<section class="different_places">
 		<div class="container">
 			<div class="row">
@@ -245,7 +246,7 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-6">
 					<div class="single_place wow fadeIn text-center mt-480" data-wow-duration="1s">
-						<img class="img-fluid w-100" src="{{ url_for('static', filename='img/places/p1.jpg') }}" alt="">
+						<img class="img-fluid w-100" src="img/places/p1.jpg" alt="">
 						<div class="overlay"></div>
 						<h4>Waterfall
 							<br> Mountain Island</h4>
@@ -253,13 +254,13 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="single_place wow fadeIn text-center mt-240" data-wow-duration="1s" data-wow-delay=".2s">
-						<img class="img-fluid w-100" src="{{ url_for('static', filename='img/places/p2.jpg') }}" alt="">
+						<img class="img-fluid w-100" src="img/places/p2.jpg" alt="">
 						<div class="overlay"></div>
 						<h4>Waterfall
 							<br> Mountain Island</h4>
 					</div>
 					<div class="single_place wow fadeIn text-center" data-wow-duration="1s" data-wow-delay="1s">
-						<img class="img-fluid w-100" src="{{ url_for('static', filename='img/places/p3.jpg') }}" alt="">
+						<img class="img-fluid w-100" src="img/places/p3.jpg" alt="">
 						<div class="overlay"></div>
 						<h4>Waterfall
 							<br> Mountain Island</h4>
@@ -267,13 +268,13 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="single_place wow fadeIn text-center" data-wow-duration="1s" data-wow-delay=".4s">
-						<img class="img-fluid w-100" src="{{ url_for('static', filename='img/places/p4.jpg') }}" alt="">
+						<img class="img-fluid w-100" src="img/places/p4.jpg" alt="">
 						<div class="overlay"></div>
 						<h4>Waterfall
 							<br> Mountain Island</h4>
 					</div>
 					<div class="single_place wow fadeIn text-center" data-wow-duration="1s" data-wow-delay=".8s">
-						<img class="img-fluid w-100" src="{{ url_for('static', filename='img/places/p5.jpg') }}" alt="">
+						<img class="img-fluid w-100" src="img/places/p5.jpg" alt="">
 						<div class="overlay"></div>
 						<h4>Waterfall
 							<br> Mountain Island</h4>
@@ -281,7 +282,7 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="single_place wow fadeIn text-center mt-240" data-wow-duration="1s" data-wow-delay=".6s">
-						<img class="img-fluid w-100" src="{{ url_for('static', filename='img/places/p6.jpg') }}" alt="">
+						<img class="img-fluid w-100" src="img/places/p6.jpg" alt="">
 						<div class="overlay"></div>
 						<h4>Waterfall
 							<br> Mountain Island</h4>
