--- a/travel/templates/profile.html
+++ b/travel/templates/profile.html
@@ -119,16 +119,38 @@
                             </div>
                         </div>
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                         <article class="media-content-section">
+                            {% for post in post %}
+                         <!--<article class="media-content-section">
                              <div class="media-body">
                                  <div class="article-metadata">
-                                   
+                                   <a class="mr-2" href="">{{ post.author.username }}</a>
+                                    <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                                     <div>
-                                        <a class="btn btn-primary btn-sm m-1" href="{{ url_for('update_post',post_id=post.id) }}">Update</a>
+                                         <a class="btn btn-primary btn-sm  m-1" href="{{ url_for('update_post',post_id=post.id) }}">Update</a>
+                                         <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+                                            <input class="btn btn-danger btn-sm m-1" type="submit" value="Delete"> 
+                                            </form>                           
+                                        </div>
                                     </div>
+                                    <h2 class="article-title">{{ post.title }}</h2>
+
                                  </div>
+                                </article>-->
+                                <div class="card" style="width: 18rem;">
+                                    <div class="card-body">
+                                      <h5 class="card-title">{{ post.title }}</h5>
+                                      <h6 class="card-subtitle mb-2 text-muted"><small>{{ post.date_posted.strftime('%Y-%m-%d') }}</small></h6>
+                                      
+                                      <a href="{{ url_for('update_post',post_id=post.id) }}" class="btn btn-primary btn-sm  m-1">Edit</a>
+                                      <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+                                        <input class="btn btn-danger btn-sm mb-1" type="submit" value="Delete"> 
+                                        </form>                           
+                                    </div>
+                                  </div>
+                                {% endfor %}
+                                
                              </div>
-                         </article>
+                         
                           <!-- your vlog details -->
                         </div>
                     </div>
