--- a/travel/templates/single-blog.html
+++ b/travel/templates/single-blog.html
@@ -11,6 +11,7 @@
                         <a href="#">
                             <h4>{{post.title}} <br /> </h4>
                         </a>
+                        <img src="{{ url_for('static', filename='img/profilepic/'+post.image_file)}}" alt="" class="img-fluid" style="height:320px; width:570px; object-fit: cover; object-position:center center;">
                         <div class="user_details">
                             <div class="float-left">
                                 <a href="#">Lifestyle</a>
