--- a/travel/templates/gallery.html
+++ b/travel/templates/gallery.html
@@ -32,6 +32,12 @@
     <section class="blog_area  single-post-area pt-4">
         <div class="container">
             <div class="row">
+                {% if gallery %}
+                {% else %}
+                    <div class="col-md-12 py-3">
+                       <div class="text-center" style="color: black;"> No Image Added</div>
+                    </div>
+                {% endif %}
                         {% for gallery in gallery %}
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                     <div class="single_travel wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
