--- a/travel/templates/single.html
+++ b/travel/templates/single.html
@@ -33,7 +33,7 @@
                         <div class="main_title pt-5">
                             <h1 class="pt-5" style="font-family: Bree Serif, serif;">{{post.title}}</h1>
                         </div>
-                        <div class="col-lg-12">
+                        <div class="col-lg-12" style="color: black;">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="single_travel wow fadeInUp" data-wow-duration="1s">
@@ -78,14 +78,14 @@
                             </div>
                         </div>
 
-                        <p class="px-2">{{post.content}}</p>
+                        <p class="px-2" style="color: black;">{{post.content}}</p>
 
                         <!--content 2-->
                         {% if post.image_file2 != 'null'%}
                         <figure class="px-2">
                             <img class="img-fluid w-100" style="height: 500px; object-fit: cover; object-position: center center;" src="{{ url_for('static', filename='img/profilepic/'+post.image_file2) }}" alt="">
                         </figure>
-                        <p class="px-2">{{post.content2}}</p>
+                        <p class="px-2" style="color: black;">{{post.content2}}</p>
                         {% endif %}
 
                         {% if post.image_file3 != 'null'%}
@@ -93,7 +93,7 @@
                         <figure class="px-2">
                             <img class="img-fluid w-100" style="height: 500px; object-fit: cover; object-position: center center;" src="{{ url_for('static', filename='img/profilepic/'+post.image_file3) }}" alt="">
                         </figure>
-                        <p class="px-2">{{post.content3}}</p>
+                        <p class="px-2" style="color: black;">{{post.content3}}</p>
                         {% endif %}
 
                         {% if post.image_file4 != 'null'%}
@@ -101,7 +101,7 @@
                         <figure class="px-2">
                             <img class="img-fluid w-100" style="height: 500px; object-fit: cover; object-position: center center;" src="{{ url_for('static', filename='img/profilepic/'+post.image_file4) }}" alt="">
                         </figure>
-                        <p class="px-2">{{post.content4}}</p>
+                        <p class="px-2" style="color: black;">{{post.content4}}</p>
                         {% endif %}
                     </div>
                 </div>
